add an arrowButton

--- a/res/resources.qrc
+++ b/res/resources.qrc
@@ -6,5 +6,6 @@
         <file>icons/checked/file-video.svg</file>
         <file>icons/checked/file-audio.svg</file>
         <file>icons/checked/wrench.svg</file>
+        <file>icons/other/arrow-right.svg</file>
     </qresource>
 </RCC>
