--- a/res/resources.qrc
+++ b/res/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
+        <!--icons-->
         <file>icons/unchecked/file-video.svg</file>
         <file>icons/unchecked/file-audio.svg</file>
         <file>icons/unchecked/wrench.svg</file>
@@ -7,5 +8,7 @@
         <file>icons/checked/file-audio.svg</file>
         <file>icons/checked/wrench.svg</file>
         <file>icons/other/arrow-right-arrow-left.svg</file>
+        <!--fonts-->
+        <file>fonts/AlibabaPuHuiTi-3-65-Medium.ttf</file>
     </qresource>
 </RCC>
